--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,7 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile project(':library')
+
+    testCompile 'junit:junit:4.12'
 }
