--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -3,45 +3,6 @@
     package="com.greenfrvr.hashtagview.sample"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <compatible-screens>
-        <screen
-            android:screenDensity="ldpi"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="mdpi"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="480"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="640"
-            android:screenSize="small"/>
-        <screen
-            android:screenDensity="ldpi"
-            android:screenSize="normal"/>
-        <screen
-            android:screenDensity="mdpi"
-            android:screenSize="normal"/>
-        <screen
-            android:screenDensity="hdpi"
-            android:screenSize="normal"/>
-        <screen
-            android:screenDensity="xhdpi"
-            android:screenSize="normal"/>
-        <screen
-            android:screenDensity="480"
-            android:screenSize="normal"/>
-        <screen
-            android:screenDensity="640"
-            android:screenSize="normal"/>
-    </compatible-screens>
-
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -52,7 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
