--- a/hashtag-view/build.gradle
+++ b/hashtag-view/build.gradle
@@ -6,8 +6,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -34,12 +34,12 @@ ext {
     libraryName = 'HashtagView'
     artifact = 'hashtag-view'
 
-    libraryDescription = 'Fully customizable widget for representing data like hashtags collection and similiar.'
+    libraryDescription = 'Android fully customizable widget for representing data like hashtags collection and similiar.'
 
     siteUrl = 'https://bintray.com/greenfrvr/maven/hashtag-view'
     gitUrl = 'https://github.com/greenfrvr/hashtag-view.git'
 
-    libraryVersion = '1.0.0'
+    libraryVersion = '1.1.0'
 
     developerId = 'greenfrvr'
     developerName = 'Artsiom Grintsevich'
