--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -20,7 +20,7 @@ android {
     buildToolsVersion "23.0.1"
     defaultConfig {
         applicationId "com.greenfrvr.hashtagview.sample"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 3
         versionName "1.1.0"
@@ -45,6 +45,7 @@ dependencies {
     compile project(':hashtag-view')
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:customtabs:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
