--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.greenfrvr.hashtagview.sample"
         minSdkVersion 15
